test/files/neg/t2421b.check
t2421b.scala:12: error: implicit error;
!I aa: F[A]
  f
  ^
1 error
